# molecular-dynamics-poc

./: .gitignore  .vmdrc  CMakeLists.txt  README.md  atoms.xyz  clean.sh  params.txt  plots.sh  vmd.sh
article/: edvinas.naraveckas.tex
data/: water.xyz
doc/: .gitignore  Makefile  abstractEN.tex  allPacks.tex  conclusions.tex  futureWork.tex  literatureSources.bib  macros.tex
plots/: averageHBondCounts.gnu  energies.gnu  pressure.gnu  temperature.gnu
src/: Atoms.cc  Atoms.h  Energies.cc  Energies.h  LeapFrogResult.h  Matrix.cc  Matrix.h  Molecules.cc  Molecules.h  Parameters.cc  Parameters.h  PredictorCorrector.cc  PredictorCorrector.h  Quaternions.cc  Quaternions.h  Renderer.cc  Renderer.h  Sites.cc  Sites.h  StepResult.h  Vectors.cc  Vectors.h  atoms.h  main.cc  parameters.cc  parameters.h  vector-utils.cc  vector-utils.h  vectors.cc  vectors.h
src/utils/: FileUtils.cc  FileUtils.h  OutputUtils.cc  OutputUtils.h
thesis/: .gitignore  abstract.tex  abstractEN.tex  conclusions.tex  fluctuatingCharge.tex  forceField.tex  implementation.tex  introduction.tex  literatureSources.bib  mainDocument.tex  molcularDynamics.tex  notes.txt  polarizedForceFields.tex
vmd/: load.tcl
